; ModuleID = '/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_sppostgame.c_UI_SPPostgameMenu_DrawAwardsMedals.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_sppostgame.c_UI_SPPostgameMenu_DrawAwardsMedals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i32* }

@medalLocations = common dso_local global i32* null, align 8
@postgameMenuInfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@ui_medalPicNames = common dso_local global i32* null, align 8
@AWARD_ACCURACY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%i%%\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%i\00", align 1
@UI_CENTER = common dso_local global i32 0, align 4
@color_yellow = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @UI_SPPostgameMenu_DrawAwardsMedals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UI_SPPostgameMenu_DrawAwardsMedals(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca [16 x i8], align 16
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %61, %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %64

13:                                               ; preds = %9
  %14 = load i32*, i32** @medalLocations, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %6, align 4
  store i32 64, i32* %7, align 4
  %19 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @postgameMenuInfo, i32 0, i32 0), align 8
  %20 = load i32, i32* %3, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %4, align 4
  %24 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @postgameMenuInfo, i32 0, i32 1), align 8
  %25 = load i32, i32* %3, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32*, i32** @ui_medalPicNames, align 8
  %32 = load i32, i32* %4, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @UI_DrawNamedPic(i32 %29, i32 %30, i32 48, i32 48, i32 %35)
  %37 = load i32, i32* %4, align 4
  %38 = load i32, i32* @AWARD_ACCURACY, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %13
  %41 = getelementptr inbounds [16 x i8], [16 x i8]* %8, i64 0, i64 0
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @Com_sprintf(i8* %41, i32 16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %42)
  br label %52

44:                                               ; preds = %13
  %45 = load i32, i32* %5, align 4
  %46 = icmp eq i32 %45, 1
  br i1 %46, label %47, label %48

47:                                               ; preds = %44
  br label %61

48:                                               ; preds = %44
  %49 = getelementptr inbounds [16 x i8], [16 x i8]* %8, i64 0, i64 0
  %50 = load i32, i32* %5, align 4
  %51 = call i32 @Com_sprintf(i8* %49, i32 16, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %50)
  br label %52

52:                                               ; preds = %48, %40
  %53 = load i32, i32* %6, align 4
  %54 = add nsw i32 %53, 24
  %55 = load i32, i32* %7, align 4
  %56 = add nsw i32 %55, 52
  %57 = getelementptr inbounds [16 x i8], [16 x i8]* %8, i64 0, i64 0
  %58 = load i32, i32* @UI_CENTER, align 4
  %59 = load i32, i32* @color_yellow, align 4
  %60 = call i32 @UI_DrawString(i32 %54, i32 %56, i8* %57, i32 %58, i32 %59)
  br label %61

61:                                               ; preds = %52, %47
  %62 = load i32, i32* %3, align 4
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %3, align 4
  br label %9

64:                                               ; preds = %9
  ret void
}

declare dso_local i32 @UI_DrawNamedPic(i32, i32, i32, i32, i32) #1

declare dso_local i32 @Com_sprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @UI_DrawString(i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
